Adding virtual page title changes

--- a/src/web/404.pug
+++ b/src/web/404.pug
@@ -8,7 +8,7 @@ eleventyExcludeFromCollections: true
 extends ../templates/1999_html.pug
 
 block append title
-  | Page not found | Open Studios
+  | Page not found | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/404.pug
