--- a/src/web/about_us.pug
+++ b/src/web/about_us.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | About Us | Open Studios
+  | About Us | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/about_us.pug
