--- a/src/web/contact_us.pug
+++ b/src/web/contact_us.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | Contact us | Open Studios
+  | Contact us | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/contact_us.pug
