--- a/src/web/services.pug
+++ b/src/web/services.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | Services | Open Studios
+  | Services | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/services.pug
