--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -5,7 +5,7 @@ html(lang='en')
         meta(name='viewport' content='width=device-width, initial-scale=1')
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
-        title Open Studios - Perth, Western Australia
+        title Open Studios | Perth, Western Australia
 
         include ./head_common.pug
 
