--- a/src/web/accessibility.pug
+++ b/src/web/accessibility.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | Accessibility | Open Studios
+  | Accessibility | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/accessibility.pug
