--- a/src/web/ai-copyright.pug
+++ b/src/web/ai-copyright.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | AI and Copyright Policy | Open Studios
+  | AI and Copyright Policy | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/ai-copyright.pug
