--- a/src/web/case_studies.pug
+++ b/src/web/case_studies.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | Case Studies | Open Studios
+  | Case Studies | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/case_studies.pug
