--- a/src/web/portfolio.pug
+++ b/src/web/portfolio.pug
@@ -6,7 +6,7 @@ dynamicPermalink: false
 extends ../templates/1999_html.pug
 
 block append title
-  | Portfolio | Open Studios
+  | Portfolio | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/portfolio.pug
