Updating case study link

--- a/src/content/case_studies.pug
+++ b/src/content/case_studies.pug
@@ -2,6 +2,7 @@ h2 Case Studies
 .content
   .row
     .column
+    a(href='https://www.artstation.com/artwork/m8d4la' target='_blank' title='3D Studio Website case study on Artstation')
       img(src='./assets/images/cs1.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
     .column
       h3 This website
@@ -11,6 +12,8 @@ h2 Case Studies
         | The new studio website is designed to cause shockwaves by being something different but also familiar. We want you to feel like you&apos;ve walked into a real office where we do our work.
       p
         | On the technical side we&apos;ve implemented automatic scaling of viewport and performance so the website works on all devices.
+      h4
+        a(href='https://www.artstation.com/artwork/m8d4la' target='_blank' title='3D Studio Website case study on Artstation') Read more about this on Artstation
   .row
     .column
       a(href='https://www.artstation.com/artwork/YBgKgY' target='_blank' title='Garrett Ray Jewellery case study on Artstation')
