--- a/src/templates/head_common.pug
+++ b/src/templates/head_common.pug
@@ -8,3 +8,5 @@ meta(name='theme-color' content='#000000')
 
 link(href='./assets/1999.css' rel='stylesheet')
 script(src="https://www.google.com/recaptcha/api.js")
+
+link(rel="canonical" href=page.url.replace('/iframes',''))
