Moving html page title to eleventy rigging

--- a/src/web/case_studies.pug
+++ b/src/web/case_studies.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "case_studies.html"
 dynamicPermalink: false
+title: Case Studies | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | Case Studies | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/case_studies.pug
