--- a/src/web/contact_us.pug
+++ b/src/web/contact_us.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "contact_us.html"
 dynamicPermalink: false
+title: Contact us | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | Contact us | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/contact_us.pug
