--- a/src/web/iframes/portfolio.pug
+++ b/src/web/iframes/portfolio.pug
@@ -2,13 +2,10 @@
 permalink: "iframes/portfolio.html"
 dynamicPermalink: false
 eleventyExcludeFromCollections: true
-
+title: Portfolio | Open Studios | Perth, Western Australia
 ---
 
 extends ../../templates/1999_iframe.pug
-
-block append title
-  | Portfolio | Open Studios
 
 block append page
   include ../../content/portfolio.pug
