--- a/src/web/index.pug
+++ b/src/web/index.pug
@@ -1,6 +1,7 @@
 ---
 permalink: "index.html"
 dynamicPermalink: false
+title: Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/2023.pug
