--- a/src/web/portfolio.pug
+++ b/src/web/portfolio.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "portfolio.html"
 dynamicPermalink: false
+title: Portfolio | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | Portfolio | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/portfolio.pug
