--- a/src/web/services.pug
+++ b/src/web/services.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "services.html"
 dynamicPermalink: false
+title: Services | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | Services | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/services.pug
