--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -5,8 +5,7 @@ html(lang='en')
         meta(name='viewport' content='width=device-width, initial-scale=1')
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
-        title
-            block title
+        title= title
 
         include ./head_common.pug
 
