--- a/src/templates/1999_iframe.pug
+++ b/src/templates/1999_iframe.pug
@@ -1,8 +1,7 @@
 doctype html
 html
     head
-        title
-            block title
+        title= title
         base(href="../")
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
