--- a/src/templates/head_common.pug
+++ b/src/templates/head_common.pug
@@ -1,3 +1,4 @@
+//- Favicon
 link(rel='apple-touch-icon' sizes='180x180' href='./assets/favicon/apple-touch-icon.png')
 link(rel='icon' type='image/png' sizes='32x32' href='/assets/favicon/favicon-32x32.png')
 link(rel='icon' type='image/png' sizes='16x16' href='/assets/favicon/favicon-16x16.png')
@@ -6,7 +7,24 @@ link(rel='mask-icon' href='/assets/favicon/safari-pinned-tab.svg' color='#5bbad5
 meta(name='msapplication-TileColor' content='#da532c')
 meta(name='theme-color' content='#000000')
 
+//- CSS
 link(href='./assets/1999.css' rel='stylesheet')
+
+//- Captcha
 script(src="https://www.google.com/recaptcha/api.js")
 
+//- SEO
 link(rel="canonical" href=page.url.replace('/iframes',''))
+meta(property='og:title' content='{{ title }}')
+meta(property='og:description' content='{{ desc or title }}')
+meta(property='og:type' content='article')
+meta(property='og:image' content='{{ cover }}')
+meta(property='og:image:width' content='1200')
+meta(property='og:image:height' content='630')
+// Twitter
+meta(name='twitter:title' content='{{ title }}')
+meta(name='twitter:card' content='summary_large_image')
+meta(name='twitter:site' content='@obsolete29')
+meta(name='twitter:description' content='{{ desc or title }}')
+meta(name='twitter:image' content='{{ cover }}')
+meta(name='twitter:creator' content='@obsolete29')
