--- a/src/web/404.pug
+++ b/src/web/404.pug
@@ -2,13 +2,10 @@
 permalink: "404.html"
 dynamicPermalink: false
 eleventyExcludeFromCollections: true
-
+title: Page not found | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | Page not found | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/404.pug
