--- a/src/web/about_us.pug
+++ b/src/web/about_us.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "about_us.html"
 dynamicPermalink: false
+title: About Us | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | About Us | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/about_us.pug
