--- a/src/web/accessibility.pug
+++ b/src/web/accessibility.pug
@@ -1,12 +1,11 @@
 ---
 permalink: "accessibility.html"
 dynamicPermalink: false
+title: Accessibility | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
 
-block append title
-  | Accessibility | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/accessibility.pug
