--- a/src/web/ai-copyright.pug
+++ b/src/web/ai-copyright.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "ai-copyright.html"
 dynamicPermalink: false
+title: AI and Copyright Policy | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | AI and Copyright Policy | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/ai-copyright.pug
