--- a/src/web/iframes/about_us.pug
+++ b/src/web/iframes/about_us.pug
@@ -2,12 +2,10 @@
 permalink: "iframes/about_us.html"
 dynamicPermalink: false
 eleventyExcludeFromCollections: true
+title: About Us | Open Studios | Perth, Western Australia
 ---
 
 extends ../../templates/1999_iframe.pug
-
-block append title
-  | About Us | Open Studios
 
 block append page
   include ../../content/about_us.pug
