--- a/src/web/iframes/case_studies.pug
+++ b/src/web/iframes/case_studies.pug
@@ -2,12 +2,10 @@
 permalink: "iframes/case_studies.html"
 dynamicPermalink: false
 eleventyExcludeFromCollections: true
+title: Case Studies | Open Studios | Perth, Western Australia
 ---
 
 extends ../../templates/1999_iframe.pug
-
-block append title
-  | Case Studies | Open Studios
 
 block append page
   include ../../content/case_studies.pug
