--- a/src/web/iframes/services.pug
+++ b/src/web/iframes/services.pug
@@ -2,13 +2,10 @@
 permalink: "iframes/services.html"
 dynamicPermalink: false
 eleventyExcludeFromCollections: true
-
+title: Services | Open Studios | Perth, Western Australia
 ---
 
 extends ../../templates/1999_iframe.pug
-
-block append title
-  | Services | Open Studios
 
 block append page
   include ../../content/services.pug
