--- a/src/web/privacy.pug
+++ b/src/web/privacy.pug
@@ -1,12 +1,10 @@
 ---
 permalink: "privacy.html"
 dynamicPermalink: false
+title: Privacy Policy | Open Studios | Perth, Western Australia
 ---
 
 extends ../templates/1999_html.pug
-
-block append title
-  | Privacy Policy | Open Studios | Perth, Western Australia
 
 block append page
   include ../content/privacy.pug
