--- a/src/templates/head_common.pug
+++ b/src/templates/head_common.pug
@@ -15,16 +15,14 @@ script(src="https://www.google.com/recaptcha/api.js")
 
 //- SEO
 link(rel="canonical" href=page.url.replace('/iframes',''))
-meta(property='og:title' content='{{ title }}')
-meta(property='og:description' content='{{ desc or title }}')
+meta(property='og:title' content=title)
+meta(property='og:description' content=description || title )
 meta(property='og:type' content='article')
-meta(property='og:image' content='{{ cover }}')
-meta(property='og:image:width' content='1200')
-meta(property='og:image:height' content='630')
+meta(property='og:image' content=cover || 'https://openstudios.xyz/assets/images/virtual_office.jpg')
+meta(property='og:image:width' content='1024')
+meta(property='og:image:height' content='768')
 // Twitter
-meta(name='twitter:title' content='{{ title }}')
+meta(name='twitter:title' content=title)
 meta(name='twitter:card' content='summary_large_image')
-meta(name='twitter:site' content='@obsolete29')
-meta(name='twitter:description' content='{{ desc or title }}')
-meta(name='twitter:image' content='{{ cover }}')
-meta(name='twitter:creator' content='@obsolete29')
+meta(name='twitter:description' content=description || title)
+meta(name='twitter:image' content=cover || 'https://openstudios.xyz/assets/images/virtual_office.jpg')
