--- a/src/web/about_us.pug
+++ b/src/web/about_us.pug
@@ -2,6 +2,8 @@
 permalink: "about_us.html"
 dynamicPermalink: false
 title: About Us | Open Studios | Perth, Western Australia
+description: We're Open Studios, a multi disciplinary digital production studio based in Perth, Western Australia. Come with us on a journey to another world.
+cover: https://openstudios.xyz/assets/images/pages/about_us.jpg
 ---
 
 extends ../templates/1999_html.pug
