--- a/src/web/accessibility.pug
+++ b/src/web/accessibility.pug
@@ -2,6 +2,7 @@
 permalink: "accessibility.html"
 dynamicPermalink: false
 title: Accessibility | Open Studios | Perth, Western Australia
+description: Open Studios aims to meet the Australian business standard for web accessibility. We want our information to be accessible to everyone, regardless of their background or ability.
 ---
 
 extends ../templates/1999_html.pug
