--- a/src/web/ai-copyright.pug
+++ b/src/web/ai-copyright.pug
@@ -2,6 +2,7 @@
 permalink: "ai-copyright.html"
 dynamicPermalink: false
 title: AI and Copyright Policy | Open Studios | Perth, Western Australia
+description: At Open Studios, we are committed to the ethical development and use of artificial intelligence (AI) technology, including generative AI.
 ---
 
 extends ../templates/1999_html.pug
