--- a/src/web/case_studies.pug
+++ b/src/web/case_studies.pug
@@ -2,6 +2,8 @@
 permalink: "case_studies.html"
 dynamicPermalink: false
 title: Case Studies | Open Studios | Perth, Western Australia
+description: Explore our digital studio case studies, where we feature some of our best work. Gain insights into our process, expertise and abilities.
+cover: https://openstudios.xyz/assets/images/pages/case_studies.jpg
 ---
 
 extends ../templates/1999_html.pug
