--- a/src/web/portfolio.pug
+++ b/src/web/portfolio.pug
@@ -2,6 +2,8 @@
 permalink: "portfolio.html"
 dynamicPermalink: false
 title: Portfolio | Open Studios | Perth, Western Australia
+description: Dive into our portfolio to see a world of innovative ideas, awesome designs and cutting-edge technologies. Learn from real-world examples that showcase our passion for crafting exceptional experiences.
+cover: https://openstudios.xyz/assets/images/pages/portfolio.jpg
 ---
 
 extends ../templates/1999_html.pug
