--- a/src/web/services.pug
+++ b/src/web/services.pug
@@ -2,6 +2,8 @@
 permalink: "services.html"
 dynamicPermalink: false
 title: Services | Open Studios | Perth, Western Australia
+description: Discover our comprehensive digital services - from building your online presence with engaging social media strategies, crafting intuitive designs, and innovating through prototypes, to project management, technical consulting, and embracing emerging technologies with bespoke development.
+cover: https://openstudios.xyz/assets/images/pages/services.jpg
 ---
 
 extends ../templates/1999_html.pug
