--- a/src/web/index.pug
+++ b/src/web/index.pug
@@ -2,6 +2,7 @@
 permalink: "index.html"
 dynamicPermalink: false
 title: Open Studios | Perth, Western Australia
+description: Greetings! Welcome to Open Studios, your go-to destination for cutting-edge digital creative and technical production. Nestled in the vibrant city of Perth, Australia, we pride ourselves on being a specialized digital production studio that stands out from the crowd.
 ---
 
 extends ../templates/2023.pug
