--- a/src/web/privacy.pug
+++ b/src/web/privacy.pug
@@ -2,6 +2,7 @@
 permalink: "privacy.html"
 dynamicPermalink: false
 title: Privacy Policy | Open Studios | Perth, Western Australia
+description: Open Studios is committed to providing quality services to you and this policy outlines our ongoing obligations to you in respect of how we manage your Personal Information.
 ---
 
 extends ../templates/1999_html.pug
