Canonical links and homepage alt tags

--- a/src/templates/head_common.pug
+++ b/src/templates/head_common.pug
@@ -14,7 +14,7 @@ link(href='./assets/1999.css' rel='stylesheet')
 script(src="https://www.google.com/recaptcha/api.js")
 
 //- SEO
-link(rel="canonical" href=page.url.replace('/iframes',''))
+link(rel="canonical" href='https://openstudios.xyz' + page.url.replace('/iframes',''))
 meta(property='og:title' content=title)
 meta(property='og:description' content=description || title )
 meta(property='og:type' content='article')
