--- a/src/content/home.pug
+++ b/src/content/home.pug
@@ -12,10 +12,10 @@ h2 Welcome!
         a(href='#' style='float: right') See case study
     .column
       h3(style='margin-top: 0') Our work
-      img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style='margin: 2%; width: 45%; height: auto;')
-      img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style='margin: 2%; width: 45%; height: auto;')
-      img(src='./assets/images/portfolio/open-studios-character-design.jpg' style='margin: 2%; width: 45%; height: auto;')
-      img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style='margin: 2%; width: 45%; height: auto;')
+      img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
+      img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Winter watercolour painting featuring Yule solid gold ring.')
+      img(src='./assets/images/portfolio/open-studios-character-design.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Composition of 3D character in a 2D background for the Kamigen comic')
+      img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Screenshot of the animated intro sequence from Kamigen')
       a(href='#' style='float: right') View portfolio
   noscript
     .row    
