Adding missing alt tags to exit sign and loading spinners

--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -127,7 +127,7 @@ html(lang='en')
             canvas#loader_image
             h1#loadingSign
                 div Loading
-                img(src='/assets/images/tail-spin.svg')
+                img(src='/assets/images/tail-spin.svg' alt='Loading spinner')
             include ../templates/door_image.pug
             a#exitSign
                 img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
