Remaining missing alt tags on the homepage

--- a/src/content/home.pug
+++ b/src/content/home.pug
@@ -3,7 +3,7 @@ h2 Welcome!
   .row
     .column
       .column
-        img(src='./assets/images/cs1xl.jpg' style=' width: 100%; height: auto;')
+        img(src='./assets/images/cs1xl.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
       .column
         h3 This website
         p
