--- a/src/content/home.pug
+++ b/src/content/home.pug
@@ -9,30 +9,16 @@ h2 Welcome!
         p
           | The new studio website is designed to cause shockwaves by being something different but also familiar.
           | We want you to feel like you&apos;ve walked into a real office where we do our work.
-        a(href='#' style='float: right') See case study
+        a(href='/case_studies.html' style='float: right') See case study
     .column
       h3(style='margin-top: 0') Our work
       img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
       img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Winter watercolour painting featuring Yule solid gold ring.')
       img(src='./assets/images/portfolio/open-studios-character-design.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Composition of 3D character in a 2D background for the Kamigen comic')
       img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style='margin: 2%; width: 45%; height: auto;' alt='Screenshot of the animated intro sequence from Kamigen')
-      a(href='#' style='float: right') View portfolio
+      a(href='/portfolio.html' style='float: right') View portfolio
   noscript
     .row    
       .column-wide
-        h3 The 1999 Experience
+        h3 Welcome to the "1999 Experience"
         p This website requires Javascript for the full experience. As you don&apos;t have Javascript enabled, you are seeing the 1999 experience.
-  .row
-    h3(style='margin: 0') Services
-  .row(style='margin-top: 0')
-    a.service_button(href='#') Creative Prototyping
-    a.service_button(href='#') Data Visualization
-    a.service_button(href='#') Emerging Technologies
-    a.service_button(href='#') Front-end Development
-    a.service_button(href='#') Interactive Experiences
-  .row(style='margin-top: 0')
-    a.service_button(href='#') Project Management
-    a.service_button(href='#') Social Media Management
-    a.service_button(href='#') Technical Consulting
-    a.service_button(href='#') UI/UX Design
-    a.service_button(href='#') Web Development
