--- a/src/templates/head_common.pug
+++ b/src/templates/head_common.pug
@@ -21,7 +21,8 @@ meta(property='og:type' content='article')
 meta(property='og:image' content=cover || 'https://openstudios.xyz/assets/images/virtual_office.jpg')
 meta(property='og:image:width' content='1024')
 meta(property='og:image:height' content='768')
-// Twitter
+
+//- Twitter
 meta(name='twitter:title' content=title)
 meta(name='twitter:card' content='summary_large_image')
 meta(name='twitter:description' content=description || title)
