--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -5,12 +5,12 @@ h2 About Us
       p
         | We&apos;re Open Studios, a multi disciplinary digital production studio.
         br
-        |  Creating unique and meaningful experiences since 2019.
+        | Creating unique and meaningful experiences since 2019.
         br
-        |             We are a husband and husband team, plus two dogs and a cat.
+        | We are a husband and husband team, plus two dogs and a cat.
   .row
     .column
-      img(src='./assets/images/paul.jpg' style=' width: 100%; height: auto;' alt='Selfie of Paul with his two doggos in the car')
+      img(src='./assets/images/about-us/paul.jpg' style=' width: 100%; height: auto;' alt='Selfie of Paul with his two doggos in the car')
       h3
         | Paul Brzeski&nbsp;
         a.icon_button(href='https://linkedin.com/in/paul-b-23620b209/' title='Paul Brzeski on LinkedIn')
@@ -21,7 +21,7 @@ h2 About Us
         | With a natural ability to envision the intersection of art and technology, Paul&apos;s journey has been characterized by staying at the forefront of the ever-changing tech landscape and pushing the boundaries of what&apos;s possible. He seamlessly adapts to different environments, bringing a perfect blend of technical expertise and creative flair to each project.
       h4 Skills
       ul
-        li 3D Production
+        li 3D Programming 
         li Character design
         li Dashboard systems
         li Generative A.I.
@@ -40,7 +40,7 @@ h2 About Us
         li Three.JS
         li VSCode
     .column
-      img(src='./assets/images/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
+      img(src='./assets/images/about-us/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
       h3
         | Garrett Kinder&nbsp;
         a.icon_button(href='https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/' title='Garrett Kinder on LinkedIn')
@@ -51,7 +51,7 @@ h2 About Us
         | Embracing the digital realm, Garrett shares his passion and expertise as a taste visionary, enriching the online world with his profound knowledge of aesthetics and all things refined.
       h4 Skills
       ul
-        li 3D Modelling and Renders
+        li 3D Modelling, Renders and Prints
         li Creative consulting
         li Generative A.I.
         li Graphic design
@@ -64,3 +64,21 @@ h2 About Us
         li Affinity Photo
         li Blender
         li Stable Diffusion
+  .row
+    .wide-column
+      h3 Our values
+  .row
+    .column
+      p Open Studios acknowledges the Nyoongar Whadjuk people - traditional custodians of this land. We wish to acknowledge the strength of their continuing culture and pay our respects to Elders past and present.
+    .column
+      img(src='./assets/images/about-us/aboriginal-flag.png' alt='The Australian Aboriginal Flag' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
+  .row
+    .column
+      p Free and Open Source software is as much a way of thinking as it is a licensing scheme, as such we strive to be accountable, transparent, informative and useful to others in all business interactions and activities.
+    .column
+      img(src='./assets/images/about-us/linux.png' alt='Collage of Open Source project logos' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
+  .row
+    .column
+      p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
+    .column
+      img(src='./assets/images/about-us/newpride.png' alt='2018 Progress Pride Flag by Daniel Quasar' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
