Updating 1999 fallback text

--- a/src/content/home.pug
+++ b/src/content/home.pug
@@ -21,4 +21,4 @@ h2 Welcome!
     .row    
       .column-wide
         h3 Welcome to the "1999 Experience"
-        p This website requires Javascript for the full experience. As you don&apos;t have Javascript enabled, you are seeing the 1999 experience.
+        p The 3D virtual office requires ECMAScript 2018 to load. Your current browser/device does not seem to support the features we need to boot up so you are seeing the "1999 experience" instead.
