--- a/src/web/accessibility.pug
+++ b/src/web/accessibility.pug
@@ -3,6 +3,8 @@ permalink: "accessibility.html"
 dynamicPermalink: false
 title: Accessibility | Open Studios | Perth, Western Australia
 description: Open Studios aims to meet the Australian business standard for web accessibility. We want our information to be accessible to everyone, regardless of their background or ability.
+priority: "0.8"
+changefreq: yearly
 ---
 
 extends ../templates/1999_html.pug
