--- a/src/web/about_us.pug
+++ b/src/web/about_us.pug
@@ -4,6 +4,8 @@ dynamicPermalink: false
 title: About Us | Open Studios | Perth, Western Australia
 description: We're Open Studios, a multi disciplinary digital production studio based in Perth, Western Australia. Come with us on a journey to another world.
 cover: https://openstudios.xyz/assets/images/pages/about_us.jpg
+priority: "0.9"
+changefreq: monthly
 ---
 
 extends ../templates/1999_html.pug
