--- a/src/web/case_studies.pug
+++ b/src/web/case_studies.pug
@@ -4,6 +4,8 @@ dynamicPermalink: false
 title: Case Studies | Open Studios | Perth, Western Australia
 description: Explore our digital studio case studies, where we feature some of our best work. Gain insights into our process, expertise and abilities.
 cover: https://openstudios.xyz/assets/images/pages/case_studies.jpg
+priority: "0.9"
+changefreq: daily
 ---
 
 extends ../templates/1999_html.pug
