--- a/src/web/contact_us.pug
+++ b/src/web/contact_us.pug
@@ -2,6 +2,8 @@
 permalink: "contact_us.html"
 dynamicPermalink: false
 title: Contact us | Open Studios | Perth, Western Australia
+priority: "0.9"
+changefreq: monthly
 ---
 
 extends ../templates/1999_html.pug
