--- a/src/web/portfolio.pug
+++ b/src/web/portfolio.pug
@@ -4,6 +4,8 @@ dynamicPermalink: false
 title: Portfolio | Open Studios | Perth, Western Australia
 description: Dive into our portfolio to see a world of innovative ideas, awesome designs and cutting-edge technologies. Learn from real-world examples that showcase our passion for crafting exceptional experiences.
 cover: https://openstudios.xyz/assets/images/pages/portfolio.jpg
+priority: "0.9"
+changefreq: daily
 ---
 
 extends ../templates/1999_html.pug
