--- a/src/web/services.pug
+++ b/src/web/services.pug
@@ -4,6 +4,8 @@ dynamicPermalink: false
 title: Services | Open Studios | Perth, Western Australia
 description: Discover our comprehensive digital services - from building your online presence with engaging social media strategies, crafting intuitive designs, and innovating through prototypes, to project management, technical consulting, and embracing emerging technologies with bespoke development.
 cover: https://openstudios.xyz/assets/images/pages/services.jpg
+priority: "0.9"
+changefreq: daily
 ---
 
 extends ../templates/1999_html.pug
