--- a/src/web/sitemap.pug
+++ b/src/web/sitemap.pug
@@ -9,5 +9,12 @@ eleventyExcludeFromCollections: true
 urlset(xmlns="http://www.sitemaps.org/schemas/sitemap/0.9")
     each page in collections.all
         url
-            loc=page.url
-            lastmod=page.date.toISOString()
+            - urlstring = 'https://openstudios.xyz' + page.url
+            loc= urlstring
+            lastmod= page.date.toISOString()
+            if page.data.changefreq || page.url == '/'
+                changefreq= page.data.changefreq
+            else
+                changefreq weekly
+            if page.data.priority
+                priority= page.data.priority
