--- a/src/web/about_us.pug
+++ b/src/web/about_us.pug
@@ -4,6 +4,7 @@ dynamicPermalink: false
 title: About Us | Open Studios | Perth, Western Australia
 description: We're Open Studios, a multi disciplinary digital production studio based in Perth, Western Australia. Come with us on a journey to another world.
 cover: https://openstudios.xyz/assets/images/pages/about_us.jpg
+date: 2023-10-18T16:58:16.267Z
 priority: "0.9"
 changefreq: monthly
 ---
