--- a/src/web/contact_us.pug
+++ b/src/web/contact_us.pug
@@ -2,6 +2,7 @@
 permalink: "contact_us.html"
 dynamicPermalink: false
 title: Contact us | Open Studios | Perth, Western Australia
+date: 2023-10-18T16:58:16.267Z
 priority: "0.9"
 changefreq: monthly
 ---
