--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -33,7 +33,7 @@ h2 Services
       p
         | Redefine online engagement with our 3D web experiences. We have extensive experience with WebGL/Three.JS, allowing us to create immersive online environments. In these digital worlds users interact with content in three dimensions. From virtual tours to interactive product displays, we can translate your vision into an experience that works on multiple platforms including older computers and mobile.
     .column
-      img(src='./assets/images/cs2.jpg' style=' width: 100%; height: 250px; object-fit: cover; object-position: top;' alt='Screenshot of a jewellery commercial for Garrett Ray Jewellery')
+      img(src='./assets/images/cs2.jpg' style=' width: 100%; height: 250px; object-fit: cover; object-position: top;' alt='Screenshot of the Garrett Ray Jewellery website, built with Shopify')
       h3 Full Stack Web Development
       p
         | We can build static websites, eCommerce, CMS and cloud services using industry leading open source software. We handle everything from the user interface to the server-side logic, ensuring seamless functionality and a polished user experience. Our expertise spans front-end technologies, back-end development, and infrastructure, providing comprehensive solutions for your online presence.
