--- a/src/web/services.pug
+++ b/src/web/services.pug
@@ -2,9 +2,9 @@
 permalink: "services.html"
 dynamicPermalink: false
 title: Services | Open Studios | Perth, Western Australia
-description: Discover our comprehensive digital services - from building your online presence with engaging social media strategies, crafting intuitive designs, and innovating through prototypes, to project management, technical consulting, and embracing emerging technologies with bespoke development.
+description: Open Studios is here to be your parter in turning dreams into reality. We have over two decades combined experience in digital production. Our team collaborates seamlessly with organisations large and small.
 cover: https://openstudios.xyz/assets/images/pages/services.jpg
-date: 2023-10-18T16:58:16.267Z
+date: 2023-11-24T01:00:00.00Z
 priority: "0.9"
 changefreq: daily
 ---
