Adding blog page, tidying template names

--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -7,7 +7,7 @@ html(lang='en')
 
         title= title
 
-        include ./head_common.pug
+        include ./header.pug
 
         style.
             #page-wrapper {
