--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -7,7 +7,7 @@ html(lang='en')
 
         title Open Studios | Perth, Western Australia
 
-        include ./head_common.pug
+        include ./header.pug
 
         style.
             #page-wrapper {
