--- a/src/templates/1999_iframe.pug
+++ b/src/templates/1999_iframe.pug
@@ -5,7 +5,7 @@ html
         base(href="../")
         meta(name="description" content="We are Open Studios. Perth based digital production studio.")
 
-        include ./head_common.pug
+        include ./header.pug
 
     body
         - var isIframe = true
