Adding structure for blog posts and January entry

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,16 +2,12 @@ h2 Blog
 .content
   .row
     .column
-      a(href='https://www.artstation.com/artwork/m8d4la' target='_blank' title='3D Studio Website case study on Artstation')
-        img(src='./assets/images/cs1.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
+      a(href='/blog/2023/01/studio-roundup-january-2023.html' target='_blank' title='3D Studio Website case study on Artstation')
+        img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
     .column
-      h3 This website
+      h3 Studio Roundup for January 2023
+      p.
+        Cartoons, magazines, comics, GIA rated diamonds... we've got it all!
       p
-        | We relaunched our studio brand looking to demonstrate our capabilities in terms of creativity and technical execution. But more importantly, this is our epicentre.
-      p
-        | The new studio website is designed to cause shockwaves by being something different but also familiar. We want you to feel like you&apos;ve walked into a real office where we do our work.
-      p
-        | On the technical side we&apos;ve implemented automatic scaling of viewport and performance so the website works on all devices.
-      h4
-        a(href='https://www.artstation.com/artwork/m8d4la' target='_blank' title='3D Studio Website case study on Artstation') Read more about this on Artstation
-  
+        a(href='/blog/2023/01/studio-roundup-january-2023.html') Check out
+        |  our January 2023 update for more.
