Adding February 2023 blog post, fixing homepage links

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,8 +2,20 @@ h2 Blog
 .content
   .row
     .column
-      a(href='/blog/2023/01/studio-roundup-january-2023.html' target='_blank' title='3D Studio Website case study on Artstation')
-        img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
+      a(href='/blog/2023/02/studio-roundup-february-2023.html' target='_blank' title='Studio Roundup for February 2023')
+        img(src='/assets/blog/2023/02/1_Lp57gnKdUAvEF7Ir3ctn8A.webp' style=' width: 100%; height: auto;' alt='Form Aura Colours is an illustration produced as part of research for an ongoing production.')
+    .column
+      h3 Studio Roundup for February 2023
+      p.
+        This month - We’re in the March issue of British Vogue! A sneak peek at our first ever cartoon character. Deep dive into a recent illustration by our art department and more.
+      p
+        a(href='/blog/2023/02/studio-roundup-february-2023.html') Read our
+        |  February 2023 retro.
+
+  .row
+    .column
+      a(href='/blog/2023/01/studio-roundup-january-2023.html' target='_blank' title='Studio Roundup for January 2023')
+        img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of our entry in British Vogue')
     .column
       h3 Studio Roundup for January 2023
       p.
