--- a/src/templates/1999_layout.pug
+++ b/src/templates/1999_layout.pug
@@ -3,7 +3,7 @@
     .header(role="banner")
         if ! isIframe
             .h1
-                a(href='./' title='Home')
+                a(href='/' title='Home')
                     img(src='/assets/images/logo-wide.png' alt='Logo')
         else
             .h1
