--- a/src/content/case_studies.pug
+++ b/src/content/case_studies.pug
@@ -3,7 +3,7 @@ h2 Case Studies
   .row
     .column
       a(href='https://www.artstation.com/artwork/m8d4la' target='_blank' title='3D Studio Website case study on Artstation')
-        img(src='./assets/images/cs1.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
+        img(src='/assets/images/cs1.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the new 3D website experience')
     .column
       h3 This website
       p
@@ -17,7 +17,7 @@ h2 Case Studies
   .row
     .column
       a(href='https://www.artstation.com/artwork/YBgKgY' target='_blank' title='Garrett Ray Jewellery case study on Artstation')
-        img(src='./assets/images/cs2.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the Garrett Ray Jewellery website')
+        img(src='/assets/images/cs2.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the Garrett Ray Jewellery website')
     .column
       h3 Garrett Ray Jewellery
       p
@@ -31,7 +31,7 @@ h2 Case Studies
   .row
     .column
       a(href='https://www.artstation.com/artwork/5vPBxP' target='_blank' title='Kamigen Aircraft Combat game case study on Artstation')
-        img(src='./assets/images/cs3.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen Aircraft combat game featuring UI elements')
+        img(src='/assets/images/cs3.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen Aircraft combat game featuring UI elements')
     .column
       h3 Kamigen: Aircraft Combat game
       p
@@ -46,7 +46,7 @@ h2 Case Studies
   .row
     .column
       a(href='https://openstudios.artstation.com/projects/DvQA60' target='_blank' title='Kamigen comics and website case study on Artstation')
-        img(src='./assets/images/cs4.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen comics art style currently in the works')
+        img(src='/assets/images/cs4.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen comics art style currently in the works')
     .column
       h3 Kamigen: Comics and website
       p
@@ -62,7 +62,7 @@ h2 Case Studies
   .row
     .column
       a(href='https://openstudios.artstation.com/projects/DvQA4E' target='_blank' title='Langenium case study on Artstation')
-      img(src='./assets/images/cs5.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the Langenium MMORPG website which blurred the line between website and video game.')
+      img(src='/assets/images/cs5.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the Langenium MMORPG website which blurred the line between website and video game.')
     .column
       h3 Langenium MMORPG
       p
