--- a/src/content/contact_us.pug
+++ b/src/content/contact_us.pug
@@ -71,7 +71,7 @@ h2 Contact us
       br
       br
       h4.icon_button
-        img(src='./assets/images/garrettray.png' alt='Garrett Ray Jewellery logo')
+        img(src='/assets/images/garrettray.png' alt='Garrett Ray Jewellery logo')
         div Garrett Ray Jewellery
       strong Facebook: 
       a(href='https://www.facebook.com/GarrettRayJewellery/') GarrettRayJewellery
@@ -87,7 +87,7 @@ h2 Contact us
       br
       br
       h4.icon_button
-        img(src='./assets/images/kamigen.png' alt='Kamigen logo')
+        img(src='/assets/images/kamigen.png' alt='Kamigen logo')
         div
           | Kamigen
       strong Facebook: 
@@ -101,7 +101,7 @@ h2 Contact us
       br
       br
       h4.icon_button
-        img(src='./assets/images/paulbrzeski.png' alt='Paul Brzeski Consulting logo')
+        img(src='/assets/images/paulbrzeski.png' alt='Paul Brzeski Consulting logo')
         div
           | Paul Brzeski
       strong Github: 
