--- a/src/templates/1999_html.pug
+++ b/src/templates/1999_html.pug
@@ -133,7 +133,7 @@ html(lang='en')
         include ./1999_layout.pug
         #webgl-wrapper
             a#exitSign(href="#")
-                img(src='./assets/exit.svg' title='Return to the office' width='300' height='85')
+                img(src='/assets/exit.svg' title='Return to the office' width='300' height='85')
             iframe#pageOverlay
             #webgl
             script#vertexshader(type='x-shader/x-vertex').
