--- a/src/templates/2023.pug
+++ b/src/templates/2023.pug
@@ -130,7 +130,7 @@ html(lang='en')
                 img(src='/assets/images/tail-spin.svg' alt='Loading spinner')
             include ../templates/door_image.pug
             a#exitSign
-                img(src='./assets/exit.svg' title='Return to the office' width='300' height='85' alt='Exit sign')
+                img(src='/assets/exit.svg' title='Return to the office' width='300' height='85' alt='Exit sign')
             iframe#pageOverlay
             #webgl
             script#vertexshader(type='x-shader/x-vertex').
