--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -10,11 +10,11 @@ h2 About Us
         | We are a husband and husband team, plus two dogs and a cat.
   .row
     .column
-      img(src='./assets/images/about-us/paul.jpg' style=' width: 100%; height: auto;' alt='Selfie of Paul with his two doggos in the car')
+      img(src='/assets/images/about-us/paul.jpg' style=' width: 100%; height: auto;' alt='Selfie of Paul with his two doggos in the car')
       h3
         | Paul Brzeski&nbsp;
         a.icon_button(href='https://linkedin.com/in/paul-b-23620b209/' title='Paul Brzeski on LinkedIn')
-          img(src='./assets/images/linkedin.png')
+          img(src='/assets/images/linkedin.png')
       p
         | Introducing Paul, a versatile and forward-thinking problem solver with over 15 years in the industry. Beyond the traditional boundaries of coding, Paul has embraced a multifaceted style that seamlessly blends technology and creativity to craft innovative solutions.
       p
@@ -40,11 +40,11 @@ h2 About Us
         li Three.JS
         li VSCode
     .column
-      img(src='./assets/images/about-us/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
+      img(src='/assets/images/about-us/garrett.png' style=' width: 100%; height: auto;' alt='Photo of Garrett studying a whisky blend at a distillery in Scotland')
       h3
         | Garrett Kinder&nbsp;
         a.icon_button(href='https://www.linkedin.com/in/garrett-ray-kinder-361ba6a5/' title='Garrett Kinder on LinkedIn')
-          img(src='./assets/images/linkedin.png' alt='LinkedIn logo')
+          img(src='/assets/images/linkedin.png' alt='LinkedIn logo')
       p
         | Meet Garrett, the embodiment of sophistication and innovation, renowned as an award-winning bartender, expert jeweler, and connoisseur of rare whiskies.
       p
@@ -71,14 +71,14 @@ h2 About Us
     .column
       p Open Studios acknowledges the Nyoongar Whadjuk people - traditional custodians of this land. We wish to acknowledge the strength of their continuing culture and pay our respects to Elders past and present.
     .column
-      img(src='./assets/images/about-us/aboriginal-flag.png' alt='The Australian Aboriginal Flag' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
+      img(src='/assets/images/about-us/aboriginal-flag.png' alt='The Australian Aboriginal Flag' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
   .row
     .column
       p Free and Open Source software is as much a way of thinking as it is a licensing scheme, as such we strive to be accountable, transparent, informative and useful to others in all business interactions and activities.
     .column
-      img(src='./assets/images/about-us/linux.png' alt='Collage of Open Source project logos' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
+      img(src='/assets/images/about-us/linux.png' alt='Collage of Open Source project logos' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
   .row
     .column
       p We embrace differences, cherishing the rich tapestry of backgrounds, experiences, and identities that each person brings. It is important to us that working relationships are not only productive but also built on a foundation of mutual respect and appreciation.
     .column
-      img(src='./assets/images/about-us/newpride.png' alt='2018 Progress Pride Flag by Daniel Quasar' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
+      img(src='/assets/images/about-us/newpride.png' alt='2018 Progress Pride Flag by Daniel Quasar' style="display: block; margin: 1rem auto; width: 50%; height: auto;")
