--- a/src/content/portfolio.pug
+++ b/src/content/portfolio.pug
@@ -16,7 +16,7 @@ h2 Portfolio
 .content.portfolio
   .row
     .column
-      img(src='./assets/images/portfolio/cottagecore.jpg' style=' width: 100%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
+      img(src='/assets/images/portfolio/cottagecore.jpg' style=' width: 100%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
       h3 Cottagecore Themed Charms Collection
       table(class='portfolio_item')
         tr
@@ -36,7 +36,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/collections/cottagecore') View the Cottagecore collection
 
     .column
-      img(src='./assets/images/portfolio/to-another-world.jpg' style=' width: 100%; height: auto;'  alt='Winter watercolour painting featuring Yule solid gold ring.')
+      img(src='/assets/images/portfolio/to-another-world.jpg' style=' width: 100%; height: auto;'  alt='Winter watercolour painting featuring Yule solid gold ring.')
       h3 'To Another World' Campaign Video
       table(class='portfolio_item')
         tr
@@ -55,7 +55,7 @@ h2 Portfolio
             a(target="_blank" href='https://www.youtube.com/watch?v=gYr3hbP24sQ') Watch the video on Youtube
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style=' width: 100%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
+      img(src='/assets/images/portfolio/open-studios-cherry-blossom-ring-in-zen-garden.jpg' style=' width: 100%; height: auto;' alt='Photo of a Sakura Blossom White Gold Ring in a Japanese Zen garden.')
       h3 White Gold and Pink Spinel Sakura Blossoms Product and Marketing
       table(class='portfolio_item')
         tr
@@ -75,7 +75,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/collections/blossoms') View the Blossoms collection
 
     .column
-      img(src='./assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style=' width: 100%; height: auto;'  alt='Winter watercolour painting featuring Yule solid gold ring.')
+      img(src='/assets/images/portfolio/open-studios-1-winter-banner-ring.jpg' style=' width: 100%; height: auto;'  alt='Winter watercolour painting featuring Yule solid gold ring.')
       h3 Yule Watercolour Campaign Banners for Winter Season of 2022
       table(class='portfolio_item')
         tr
@@ -95,7 +95,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Yule.&sort_by=title-ascending') View the Yule collection
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-gemini-banner.jpg' style=' width: 100%; height: auto;'  alt='Picture of the stars and a Gemini solid gold pendant.')
+      img(src='/assets/images/portfolio/open-studios-gemini-banner.jpg' style=' width: 100%; height: auto;'  alt='Picture of the stars and a Gemini solid gold pendant.')
       h3 Gemini Zodiac Solid Gold Design, Production and Marketing
       table(class='portfolio_item')
         tr
@@ -114,7 +114,7 @@ h2 Portfolio
           td
             a(target="_blank" href='https://grayjewellery.com.au/collections/all-jewellery?filter.v.price.gte=&filter.v.price.lte=&filter.p.tag=Gemini&sort_by=title-ascending') View the Gemini collection
     .column
-      img(src='./assets/images/portfolio/open-studios-dsc-2682-large.jpg' style=' width: 100%; height: auto;' alt='Close up photo of a finished Madeira Citrine gold pendant.')
+      img(src='/assets/images/portfolio/open-studios-dsc-2682-large.jpg' style=' width: 100%; height: auto;' alt='Close up photo of a finished Madeira Citrine gold pendant.')
       h3 Madeira Citrine 14K Gold pendant fine jewellery commission
       table(class='portfolio_item')
         tr
@@ -133,7 +133,7 @@ h2 Portfolio
           td N/A, private collection.
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-mabon.jpg' style=' width: 100%; height: auto;' alt='Image of autumn leaves and the Mabon design solid gold ring')
+      img(src='/assets/images/portfolio/open-studios-mabon.jpg' style=' width: 100%; height: auto;' alt='Image of autumn leaves and the Mabon design solid gold ring')
       h3 Marketing banners for jewellery clients website and socials
       table(class='portfolio_item')
         tr
@@ -153,7 +153,7 @@ h2 Portfolio
             a(target="_blank" href='https://www.instagram.com/garrettrayjewellery/') Visit the client's Instagram
 
     .column
-      img(src='./assets/images/portfolio/open-studios-foxtail.jpg' style=' width: 100%; height: auto;' alt='Photo of Foxtail silver chain')
+      img(src='/assets/images/portfolio/open-studios-foxtail.jpg' style=' width: 100%; height: auto;' alt='Photo of Foxtail silver chain')
       h3 Handmade Silver Foxtail Chain Design and Product Marketing
       table(class='portfolio_item')
         tr
@@ -173,7 +173,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/products/fine-silver-handmade-999-foxtail-double-loop-in-loop-chain-choker-to-necklace-length-various-lengths-available') Visit the product page
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;' alt='Close up of Morganite earrings')
+      img(src='/assets/images/portfolio/open-studios-morganite.jpg' style=' width: 100%; height: auto;' alt='Close up of Morganite earrings')
       h3 Handmade 18k Gold Morganite Earring Product and Marketing
       table(class='portfolio_item')
         tr
@@ -193,7 +193,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/products/18k-gold-morganite-earrings') Visit the product page
 
     .column
-      img(src='./assets/images/portfolio/open-studios-character-design.jpg' style=' width: 100%; height: auto;' alt='Composition of 3D character in a 2D background for the Kamigen comic')
+      img(src='/assets/images/portfolio/open-studios-character-design.jpg' style=' width: 100%; height: auto;' alt='Composition of 3D character in a 2D background for the Kamigen comic')
       h3 Taka - Manga Style Character Design and Renders from Kamigen
       table(class='portfolio_item')
         tr
@@ -213,7 +213,7 @@ h2 Portfolio
             a(target="_blank" href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-aquamarine.jpg' style=' width: 100%; height: auto;' alt='Close up of Aquamarine pendant necklace')
+      img(src='/assets/images/portfolio/open-studios-aquamarine.jpg' style=' width: 100%; height: auto;' alt='Close up of Aquamarine pendant necklace')
       h3 Handmade 18k Gold Aquamarine Pendant Product and Marketing
       table(class='portfolio_item')
         tr
@@ -233,7 +233,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/products/18-karat-gold-and-aquamarine-necklace') Visit the product page
 
     .column
-      img(src='./assets/images/portfolio/open-studios-kamigen.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the animated intro sequence from Kamigen')
+      img(src='/assets/images/portfolio/open-studios-kamigen.jpg' style=' width: 100%; height: auto;' alt='Screenshot of the animated intro sequence from Kamigen')
       h3 Manga style animated film introduction sequence
       table(class='portfolio_item')
         tr
@@ -253,7 +253,7 @@ h2 Portfolio
             a(target="_blank" href='https://www.youtube.com/watch?v=VUzLwHIt_vM') Watch the animation test
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-fanta-garnet.jpg' style=' width: 100%; height: auto;' alt='Close up phto of the Fanta Garnet necklace pendant')
+      img(src='/assets/images/portfolio/open-studios-fanta-garnet.jpg' style=' width: 100%; height: auto;' alt='Close up phto of the Fanta Garnet necklace pendant')
       h3 Handmade 18K Gold Fanta Garnet Necklace Pendant and Marketing
       table(class='portfolio_item')
         tr
@@ -273,7 +273,7 @@ h2 Portfolio
             a(target="_blank" href='https://grayjewellery.com.au/products/18k-gold-and-fanta-garnet-necklace') Visit the product page
 
     .column
-      img(src='./assets/images/portfolio/open-studios-emerald.jpg' style=' width: 100%; height: auto;' alt='Close up of the Emerald and Diamond gold engagement ring')
+      img(src='/assets/images/portfolio/open-studios-emerald.jpg' style=' width: 100%; height: auto;' alt='Close up of the Emerald and Diamond gold engagement ring')
       h3 Bespoke Emerald and Diamond 14K Gold Engagement Ring
       table(class='portfolio_item')
         tr
@@ -292,7 +292,7 @@ h2 Portfolio
           td N/A, private collection.
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-2019-web-design-home.jpg' style=' width: 100%; height: auto;' alt='Website design for a local software engineering consultancy')
+      img(src='/assets/images/portfolio/open-studios-2019-web-design-home.jpg' style=' width: 100%; height: auto;' alt='Website design for a local software engineering consultancy')
       h3 Software Engineering Consultancy Branding and Website
       table(class='portfolio_item')
         tr
@@ -312,7 +312,7 @@ h2 Portfolio
             a(target="_blank" href='https://paulbrzeski.com/') Visit the client's website
 
     .column
-      img(src='./assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen Aircraft combat game featuring UI elements')
+      img(src='/assets/images/portfolio/open-studios-kamigengame.jpg' style=' width: 100%; height: auto;' alt='Concept art of the Kamigen Aircraft combat game featuring UI elements')
       h3 Three.JS Browser Based Aircraft Combat game for Kamigen
       table(class='portfolio_item')
         tr
@@ -332,7 +332,7 @@ h2 Portfolio
             a(target="_blank" href='https://kamigen.com/game.html') Drop into the pilots seat
   .row
     .column
-      img(src='./assets/images/portfolio/open-studios-pelican.jpg' style=' width: 100%; height: auto;' alt='Composition of a 3D vehicle on the 2D background of the Kamigen comics')
+      img(src='/assets/images/portfolio/open-studios-pelican.jpg' style=' width: 100%; height: auto;' alt='Composition of a 3D vehicle on the 2D background of the Kamigen comics')
       h3 The Pelican - Custom Solarpunk Amphibious Aircraft from Kamigen
       table(class='portfolio_item')
         tr
@@ -351,7 +351,7 @@ h2 Portfolio
           td
             a(target="_blank" href='https://www.instagram.com/p/Cr-84t1JqnA/?img_index=1') Kamigen Comics on Instagram
     .column
-      img(src='./assets/images/portfolio/open-studios-langenium.jpg' style=' width: 100%; height: auto;' alt='Cropped image of the main Langenium lore poster')
+      img(src='/assets/images/portfolio/open-studios-langenium.jpg' style=' width: 100%; height: auto;' alt='Cropped image of the main Langenium lore poster')
       h3 Langenium MMORPG and Multimedia Franchise Artwork and Production
       table(class='portfolio_item')
         tr
