--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,18 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/03/studio-roundup-march-2023.html' target='_blank' title='Studio Roundup for March 2023')
+        img(src='/assets/blog/2023/03/1_Qm2e0hvRssEhyWg90oIQog.webp' style=' width: 100%; height: auto;' alt='Take a wearable piece of zen from the garden with the Blossoms Ring.')
+    .column
+      h3 Studio Roundup for March 2023
+      p.
+        Latest from the little studio on the west coast - The character designs for Nerv and Arty are done! To celebrate this years March 27th Cherry Blossom Day we began promoting the Blossoms collection.
+      p
+        a(href='/blog/2023/03/studio-roundup-march-2023.html') Read our
+        |  March 2023 retro.
+
+  .row
+    .column
       a(href='/blog/2023/02/studio-roundup-february-2023.html' target='_blank' title='Studio Roundup for February 2023')
         img(src='/assets/blog/2023/02/1_Lp57gnKdUAvEF7Ir3ctn8A.webp' style=' width: 100%; height: auto;' alt='Form Aura Colours is an illustration produced as part of research for an ongoing production.')
     .column
