Adding April 2023 blog post

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,19 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/04/studio-roundup-april-2023.html' target='_blank' title='Studio Roundup for April 2023')
+        img(src='/assets/blog/2023/04/1_shi4xFrJIWw9dQ2AfjBMfA.webp' style=' width: 100%; height: auto;' alt='The Taurus pendant features the bull and his steadfast horns on the front and the Taurus constellation on the back.')
+    .column
+      h3 Studio Roundup for April 2023
+      p.
+        April 20th marks the start of Taurus. Preview of the latest pages from Kamigen.
+      p
+        | Read more in our 
+        a(href='/blog/2023/04/studio-roundup-april-2023.html') April 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/03/studio-roundup-march-2023.html' target='_blank' title='Studio Roundup for March 2023')
         img(src='/assets/blog/2023/03/1_Qm2e0hvRssEhyWg90oIQog.webp' style=' width: 100%; height: auto;' alt='Take a wearable piece of zen from the garden with the Blossoms Ring.')
     .column
@@ -9,8 +22,9 @@ h2 Blog
       p.
         Latest from the little studio on the west coast - The character designs for Nerv and Arty are done! To celebrate this years March 27th Cherry Blossom Day we began promoting the Blossoms collection.
       p
-        a(href='/blog/2023/03/studio-roundup-march-2023.html') Read our
-        |  March 2023 retro.
+        | Read our
+        a(href='/blog/2023/03/studio-roundup-march-2023.html')  March 2023 retro
+        | .
 
   .row
     .column
@@ -21,8 +35,9 @@ h2 Blog
       p.
         This month - We’re in the March issue of British Vogue! A sneak peek at our first ever cartoon character. Deep dive into a recent illustration by our art department and more.
       p
-        a(href='/blog/2023/02/studio-roundup-february-2023.html') Read our
-        |  February 2023 retro.
+        | Read our 
+        a(href='/blog/2023/02/studio-roundup-february-2023.html') February 2023 retro
+        | .
 
   .row
     .column
@@ -33,5 +48,6 @@ h2 Blog
       p.
         Cartoons, magazines, comics, GIA rated diamonds... we've got it all!
       p
-        a(href='/blog/2023/01/studio-roundup-january-2023.html') Check out
-        |  our January 2023 update for more.
+        | Check out our 
+        a(href='/blog/2023/01/studio-roundup-january-2023.html') January 2023 update
+        | .
