Adding May 2023 article

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,19 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/05/studio-roundup-may-2023.html' target='_blank' title='Studio Roundup for May 2023')
+        img(src='/assets/blog/2023/05/1_UevzevyzGN0PlpF6XpOiCw.webp' style=' width: 100%; height: auto;' alt='This classic Gemini design features the mirror image of a mans face to represent the twins.')
+    .column
+      h3 Studio Roundup for May 2023
+      p.
+        A time of renewal and transformation - this is our retrospective for the month of May 2023.
+      p
+        | Read more in our 
+        a(href='/blog/2023/05/studio-roundup-may-2023.html') May 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/04/studio-roundup-april-2023.html' target='_blank' title='Studio Roundup for April 2023')
         img(src='/assets/blog/2023/04/1_shi4xFrJIWw9dQ2AfjBMfA.webp' style=' width: 100%; height: auto;' alt='The Taurus pendant features the bull and his steadfast horns on the front and the Taurus constellation on the back.')
     .column
