Adding June article

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,19 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/06/studio-roundup-june-2023.html' target='_blank' title='Studio Roundup for June 2023')
+        img(src='/assets/blog/2023/06/1_DJCaxmHRqHXM4tGMBJiPXA.webp' style=' width: 100%; height: auto;' alt='Cancer is emotional, highly intuitive, caring, and above all, dependable. Check out the collection.')
+    .column
+      h3 Studio Roundup for June 2023
+      p.
+        This month we reflect on moving to GA4. Stunning pendants. File based Kanban. Establishing web presence via portfolio.
+      p
+        | Check out our 
+        a(href='/blog/2023/06/studio-roundup-june-2023.html') June 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/05/studio-roundup-may-2023.html' target='_blank' title='Studio Roundup for May 2023')
         img(src='/assets/blog/2023/05/1_UevzevyzGN0PlpF6XpOiCw.webp' style=' width: 100%; height: auto;' alt='This classic Gemini design features the mirror image of a mans face to represent the twins.')
     .column
