Adding July 2023 retro post

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,19 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/07/studio-roundup-july-2023.html' target='_blank' title='Studio Roundup for July 2023')
+        img(src='/assets/blog/2023/07/1_vnEMqG7iAtvJXFlS-pMkIg.webp' style=' width: 100%; height: auto;' alt='Leo the proud lion, sculpted in precious metals with his majestically windswept mane.')
+    .column
+      h3 Studio Roundup for July 2023
+      p.
+        This month we reflect on moving to GA4. Stunning pendants. File based Kanban. Establishing web presence via portfolio.
+      p
+        | Check out our 
+        a(href='/blog/2023/07/studio-roundup-july-2023.html') July 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/06/studio-roundup-june-2023.html' target='_blank' title='Studio Roundup for June 2023')
         img(src='/assets/blog/2023/06/1_DJCaxmHRqHXM4tGMBJiPXA.webp' style=' width: 100%; height: auto;' alt='Cancer is emotional, highly intuitive, caring, and above all, dependable. Check out the collection.')
     .column
