Fixing July blurb on blog page

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -7,9 +7,9 @@ h2 Blog
     .column
       h3 Studio Roundup for July 2023
       p.
-        This month we reflect on moving to GA4. Stunning pendants. File based Kanban. Establishing web presence via portfolio.
+        July is a month of celebration so let's celebrate! Happy Independence Day! Viva Magenta! Dive into PR on Artstation.
       p
-        | Check out our 
+        | And more in our 
         a(href='/blog/2023/07/studio-roundup-july-2023.html') July 2023 retro
         | .
 
