Adding September 2023 blog post

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,10 +2,25 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/09/studio-roundup-september-2023.html' target='_blank' title='Studio Roundup for September 2023')
+        img(src='/assets/blog/2023/09/1_CSEjUsaGdPWgjjutW2rc8w.webp' style=' width: 100%; height: auto;' alt='You know that feeling when you\'re driving at night down a scenic highway towards the city? In Perth Western Australia we have a road like that called Riverside Drive.')
+    .column
+      a(href='/blog/2023/09/studio-roundup-september-2023.html')
+        h3 Studio Roundup for September 2023
+      p.
+        Come along with us To Another World. Our jewellery picks for the season. Delve into the challenges of making a 3D website.
+      p
+        | Read our 
+        a(href='/blog/2023/09/studio-roundup-september-2023.html') September 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/08/studio-roundup-august-2023.html' target='_blank' title='Studio Roundup for August 2023')
         img(src='/assets/blog/2023/08/1_KiFpOsEZO4yE7mzAeucs0w.webp' style=' width: 100%; height: auto;' alt='The Virgo Pendant features the Maiden’s hand holding a sheaf of wheat, with the Virgo constellation on the reverse side.')
     .column
-      h3 Studio Roundup for August 2023
+      a(href='/blog/2023/08/studio-roundup-august-2023.html')
+        h3 Studio Roundup for August 2023
       p.
         Optimising 3D for the web. Virgo and Viva Magenta! What is "good code" anyway?
       p
@@ -18,7 +33,8 @@ h2 Blog
       a(href='/blog/2023/07/studio-roundup-july-2023.html' target='_blank' title='Studio Roundup for July 2023')
         img(src='/assets/blog/2023/07/1_vnEMqG7iAtvJXFlS-pMkIg.webp' style=' width: 100%; height: auto;' alt='Leo the proud lion, sculpted in precious metals with his majestically windswept mane.')
     .column
-      h3 Studio Roundup for July 2023
+      a(href='/blog/2023/07/studio-roundup-july-2023.html')
+        h3 Studio Roundup for July 2023
       p.
         July is a month of celebration so let's celebrate! Happy Independence Day! Viva Magenta! Dive into PR on Artstation.
       p
@@ -31,7 +47,8 @@ h2 Blog
       a(href='/blog/2023/06/studio-roundup-june-2023.html' target='_blank' title='Studio Roundup for June 2023')
         img(src='/assets/blog/2023/06/1_DJCaxmHRqHXM4tGMBJiPXA.webp' style=' width: 100%; height: auto;' alt='Cancer is emotional, highly intuitive, caring, and above all, dependable. Check out the collection.')
     .column
-      h3 Studio Roundup for June 2023
+      a(href='/blog/2023/06/studio-roundup-june-2023.html')
+        h3 Studio Roundup for June 2023
       p.
         This month we reflect on moving to GA4. Stunning pendants. File based Kanban. Establishing web presence via portfolio.
       p
@@ -44,7 +61,8 @@ h2 Blog
       a(href='/blog/2023/05/studio-roundup-may-2023.html' target='_blank' title='Studio Roundup for May 2023')
         img(src='/assets/blog/2023/05/1_UevzevyzGN0PlpF6XpOiCw.webp' style=' width: 100%; height: auto;' alt='This classic Gemini design features the mirror image of a mans face to represent the twins.')
     .column
-      h3 Studio Roundup for May 2023
+      a(href='/blog/2023/05/studio-roundup-may-2023.html')
+        h3 Studio Roundup for May 2023
       p.
         A time of renewal and transformation - this is our retrospective for the month of May 2023.
       p
@@ -57,7 +75,8 @@ h2 Blog
       a(href='/blog/2023/04/studio-roundup-april-2023.html' target='_blank' title='Studio Roundup for April 2023')
         img(src='/assets/blog/2023/04/1_shi4xFrJIWw9dQ2AfjBMfA.webp' style=' width: 100%; height: auto;' alt='The Taurus pendant features the bull and his steadfast horns on the front and the Taurus constellation on the back.')
     .column
-      h3 Studio Roundup for April 2023
+      a(href='/blog/2023/04/studio-roundup-april-2023.html')
+        h3 Studio Roundup for April 2023
       p.
         April 20th marks the start of Taurus. Preview of the latest pages from Kamigen.
       p
@@ -70,7 +89,8 @@ h2 Blog
       a(href='/blog/2023/03/studio-roundup-march-2023.html' target='_blank' title='Studio Roundup for March 2023')
         img(src='/assets/blog/2023/03/1_Qm2e0hvRssEhyWg90oIQog.webp' style=' width: 100%; height: auto;' alt='Take a wearable piece of zen from the garden with the Blossoms Ring.')
     .column
-      h3 Studio Roundup for March 2023
+      a(href='/blog/2023/03/studio-roundup-march-2023.html')
+        h3 Studio Roundup for March 2023
       p.
         Latest from the little studio on the west coast - The character designs for Nerv and Arty are done! To celebrate this years March 27th Cherry Blossom Day we began promoting the Blossoms collection.
       p
@@ -83,7 +103,8 @@ h2 Blog
       a(href='/blog/2023/02/studio-roundup-february-2023.html' target='_blank' title='Studio Roundup for February 2023')
         img(src='/assets/blog/2023/02/1_Lp57gnKdUAvEF7Ir3ctn8A.webp' style=' width: 100%; height: auto;' alt='Form Aura Colours is an illustration produced as part of research for an ongoing production.')
     .column
-      h3 Studio Roundup for February 2023
+      a(href='/blog/2023/02/studio-roundup-february-2023.html')
+        h3 Studio Roundup for February 2023
       p.
         This month - We’re in the March issue of British Vogue! A sneak peek at our first ever cartoon character. Deep dive into a recent illustration by our art department and more.
       p
@@ -96,7 +117,8 @@ h2 Blog
       a(href='/blog/2023/01/studio-roundup-january-2023.html' target='_blank' title='Studio Roundup for January 2023')
         img(src='/assets/blog/2023/01/1_0twpdr9rjoC3lNUQ1o1Wow.webp' style=' width: 100%; height: auto;' alt='Screenshot of our entry in British Vogue')
     .column
-      h3 Studio Roundup for January 2023
+      a(href='/blog/2023/01/studio-roundup-january-2023.html')
+        h3 Studio Roundup for January 2023
       p.
         Cartoons, magazines, comics, GIA rated diamonds... we've got it all!
       p
