October 2023 blog post and fixing links on blog page

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,6 +2,20 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/10/studio-roundup-october-2023.html' target='_blank' title='Studio Roundup for October 2023')
+        img(src='/assets/blog/2023/10/1_SLu3jtltivXMa4iTfvox4Q.webp' style=' width: 100%; height: auto;' alt='You know that feeling when you\'re driving at night down a scenic highway towards the city? In Perth Western Australia we have a road like that called Riverside Drive.')
+    .column
+      a(href='/blog/2023/10/studio-roundup-october-2023.html')
+        h3 Studio Roundup for October 2023
+      p.
+        Our report about the Next Gen OS. Cottagecore charms unveiled. Creating a virtual open studio.
+      p
+        | Check out our 
+        a(href='/blog/2023/10/studio-roundup-october-2023.html') October 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/09/studio-roundup-september-2023.html' target='_blank' title='Studio Roundup for September 2023')
         img(src='/assets/blog/2023/09/1_CSEjUsaGdPWgjjutW2rc8w.webp' style=' width: 100%; height: auto;' alt='You know that feeling when you\'re driving at night down a scenic highway towards the city? In Perth Western Australia we have a road like that called Riverside Drive.')
     .column
