Adding November 2023 blog post

--- a/src/content/blog.pug
+++ b/src/content/blog.pug
@@ -2,8 +2,22 @@ h2 Blog
 .content
   .row
     .column
+      a(href='/blog/2023/11/studio-roundup-november-2023.html' target='_blank' title='Studio Roundup for November 2023')
+        img(src='/assets/blog/2023/11/1_CgaG1-mK8Ys4idpaYmNavA.webp' style=' width: 100%; height: auto;' alt='Meet Nerv, a young demon who lives in hell. Demonology is coming in 2024!')
+    .column
+      a(href='/blog/2023/11/studio-roundup-november-2023.html')
+        h3 Studio Roundup for November 2023
+      p.
+        A peek at our upcoming cartoon series. New charms and celebrating handmade. The evolution of our game project. What our studio can do for you.
+      p
+        | Set your sights on our 
+        a(href='/blog/2023/11/studio-roundup-november-2023.html') November 2023 retro
+        | .
+
+  .row
+    .column
       a(href='/blog/2023/10/studio-roundup-october-2023.html' target='_blank' title='Studio Roundup for October 2023')
-        img(src='/assets/blog/2023/10/1_SLu3jtltivXMa4iTfvox4Q.webp' style=' width: 100%; height: auto;' alt='You know that feeling when you\'re driving at night down a scenic highway towards the city? In Perth Western Australia we have a road like that called Riverside Drive.')
+        img(src='/assets/blog/2023/10/1_SLu3jtltivXMa4iTfvox4Q.webp' style=' width: 100%; height: auto;' alt='The Cottagecore Collection celebrates nature and the simpler things in life.')
     .column
       a(href='/blog/2023/10/studio-roundup-october-2023.html')
         h3 Studio Roundup for October 2023
