About us and services page tweaks

--- a/src/content/about_us.pug
+++ b/src/content/about_us.pug
@@ -7,7 +7,7 @@ h2 About Us
         br
         | Creating unique and meaningful experiences since 2019.
         br
-        | We are a husband and husband team, plus two dogs and a cat.
+        | We are a husband and husband team, plus two dogs and a cat. 
   .row
     .column
       img(src='/assets/images/about-us/paul.jpg' style=' width: 100%; height: auto;' alt='Selfie of Paul with his two doggos in the car')
@@ -30,11 +30,13 @@ h2 About Us
         li Technical consulting
         li UI/UX design
         li Web development
+        li Video editing
       h4 Tools
       ul
         li Affinity Designer
         li Affinity Photo
         li Blender
+        li DaVinci Resolve
         li Linux. Lots of Linux.
         li Stable Diffusion
         li Three.JS
@@ -58,12 +60,18 @@ h2 About Us
         li Photography
         li Product design
         li Social media management
+        li Video editing
       h4 Tools
       ul
         li Affinity Designer
         li Affinity Photo
         li Blender
+        li DaVinci Resolve
         li Stable Diffusion
+  .row.center
+    .wide-column
+      p
+        | If you have a really big idea in mind we can draw upon a network of trusted professionals to fill the ranks of an efficient and effective project delivery team.
   .row
     .wide-column
       h3 Our values
