--- a/src/content/services.pug
+++ b/src/content/services.pug
@@ -3,7 +3,7 @@ h2 Services
   .row.center
     .wide-column
       p
-        | Founded to produce our own ideas and passion projects, Open Studios is here to be your parter in turning dreams into reality. We have over two decades combined experience in digital production. Our team collaborates seamlessly with organisations large and small, if you have a really big idea in mind we can draw upon a network of trusted professionals to fill the ranks of an efficient and effective project delivery team.
+        | Open Studios has a wealth of tools, skills and unique knowledge that becomes available to you when you hire us. We founded this studio to make our dreams into reality. When you hire us, we apply the same passion to your ideas and make your dreams a reality too.
   .row
     .column
       img(src='/assets/images/portfolio/open-studios-kamigen.jpg' style=' width: 100%; height: 250px; object-fit: cover;' alt='Screenshot of the animated intro sequence from Kamigen')
@@ -37,3 +37,7 @@ h2 Services
       h3 Full Stack Web Development
       p
         | We can build static websites, eCommerce, CMS and cloud services using industry leading open source software. We handle everything from the user interface to the server-side logic, ensuring seamless functionality and a polished user experience. Our expertise spans front-end technologies, back-end development, and infrastructure, providing comprehensive solutions for your online presence.
+  .row.center
+    .wide-column
+      p
+        | 
